--- a/index.html
+++ b/index.html
@@ -1,126 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>grooves and grams</title>
-    <link href="css/style.css" rel="stylesheet">
-    <style>
-    :root {
-      --rad: 14px;
-      --rad-lg: 24px;
-      --lg: 32px;
-      --sm: 24px;
-    }
-    body {
-      margin: 0;
-      background: radial-gradient(#222, #000);
-      min-height: 100vh;
-      color: white;
-      font: 18px/1 sans-serif;
-      font-weight: 600;
-    }
-    .wrap {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 2px;
-      padding: var(--lg) 0;
-    }
-    #grooves {
-      border-radius: var(--rad-lg);
-      height: auto;
-      width: 100%;
-      min-width: 160px;
-      max-width: 479px;
-      aspect-ratio: 1 / 1;
-    }
-    .tracks {
-      display: flex;
-      gap: 2px;
-      justify-content: center;
-    }
-    .track {
-      background: #222;
-      padding: 48px 32px 24px 32px;
-      border: 2px solid #272727;
-      border-radius: 0 0 var(--rad) var(--rad);
-      color: #ddd;
-      font: 24px/1 sans-serif;
-      cursor: pointer;
-    }
-    .track:hover {
-      color: white;
-      background: #272727;
-      border-color: #333;
-    }
-    .track:active {
-      transform: perspective(100px) translateZ(-2px) rotateX(-3deg);
-      transform-origin: top center;
-    }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link href="./main.css" rel="stylesheet" />
   </head>
-<body>
-  <div class="wrap">
-    <h1>grooves and grams</h1>
-    <div id="grooves"></div>
-    <div class="tracks">
-      <button class="track">1</button>
-      <button class="track">2</button>
-      <button class="track">3</button>
-      <button class="track">4</button>
-      <button class="track">5</button>
+  <body>
+    <div id="wrap">
+      <div id="box">
+        <div id="frame">
+          <h1>grooves and grams [WIP]</h1>
+          <div id="grooves"></div>
+          <progress id="seeker" min="0" max="100" value="50"></progress>
+          <div id="credits">
+            <span>With</span>
+            <i class="icon">favorite</i>
+            <span>by</span>
+            <a href="https://nishan.rayamajhee.com">nishan.rayamajhee</a>
+          </div>
+        </div>
+      </div>
+      <div class="keys">
+        <button class="key" id="play"><i class="icon">play_arrow</i></button>
+        <button class="key"><i class="icon">skip_previous</i></button>
+        <button class="key">
+          <i class="icon">skip_next</i>
+        </button>
+        <button class="key">
+          <i class="icon">shuffle</i>
+        </button>
+        <button class="key track">♣</button>
+        <button class="key track">♦</button>
+        <button class="key track">♥</button>
+        <button class="key track">♠</button>
+        <div id="wheel">
+          <button id="vol-up">
+            <i class="icon">add</i>
+          </button>
+          <button id="vol-down">
+            <i class="icon">remove</i>
+          </button>
+        </div>
+      </div>
     </div>
-  </div>
-  <script src="https://www.youtube.com/iframe_api"></script>
-  <script>
-  var player;
-  var playlist;
-  
-  function onYouTubeIframeAPIReady() {
-    player = new YT.Player("grooves", {
-      playerVars: {
-        listType: "playlist",
-        list: "PL8oy4JGFJfJJTvJ6jKONBclrc7G1j9Kmo",
-        // disablekb: 1,
-        controls: 0, 
-        playsinline: 1 // Important for mobile browsers
-      },
-      events: {
-        onReady: onPlayerReady,
-        onStateChange: onPlayerStateChange
-      }
-    });
-  }
-  
-  const tracks = document.querySelectorAll(".track");
-  const numTracks = tracks.length;
-  let seed = 0;
-  
-  tracks.forEach((track, i) => {
-    track.addEventListener("click", () => {
-      seed = i;
-      const d = playlist.length / numTracks;
-      const random = Math.round(seed * d + Math.random() * d);
-      player?.playVideoAt(random);
-    });
-  });
-  
-  function onPlayerReady(event) {
-    playlist = player.getPlaylist();
-    const random = Math.trunc(Math.random() * playlist.length);
-    console.log(random);
-    player.playVideoAt(random);
-  }
-  function onPlayerStateChange(event) {
-    if (event.data == YT.PlayerState.ENDED) {
-      const d = playlist.length / numTracks;
-  
-      const random = Math.trunc(seed * d + Math.random() * d);
-      player?.playVideoAt(playlist?.[random]);
-    }
-  }
-  </script>
-  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "275f39082c0a479f9936679cacdae3b2"}'></script>    <style>
-</body>
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="./main.js"></script>
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "275f39082c0a479f9936679cacdae3b2"}'
+    ></script>
+  </body>
 </html>
