--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>grooves and grams</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,20 +18,18 @@
   </head>
   <body>
     <div class="flex-col items-center" id="wrap">
-      <div id="box">
-        <div class="flex-col" id="frame">
-          <h1>grooves and grams [WIP]</h1>
-          <div id="grooves"></div>
-          <progress id="seeker" min="0" max="100" value="50"></progress>
-          <div id="credits">
-            <span>With</span>
-            <i class="icon">favorite</i>
-            <span>by</span>
-            <a href="https://nishan.rayamajhee.com">nishan.rayamajhee</a>
-          </div>
+      <div class="flex-col" id="box">
+        <h1>grooves and grams</h1>
+        <div id="youtube"></div>
+        <progress id="seeker" min="0" max="100" value="80"></progress>
+        <div id="credits">
+          <span>With</span>
+          <i class="icon">favorite</i>
+          <span>by</span>
+          <a href="https://nishan.rayamajhee.com">nishan</a>
         </div>
       </div>
-      <div class="flex keys">
+      <div class="flex" id="keys">
         <div class="flex">
           <button class="key" id="play"><i class="icon">play_arrow</i></button>
         </div>
