--- a/index.html
+++ b/index.html
@@ -17,30 +17,35 @@
     <link href="./main.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- <div id="ocean"></div> -->
     <div class="flex-col items-center" id="wrap">
       <div class="flex-col" id="box">
-        <h1>grooves and grams</h1>
+        <div class="grill"></div>
+        <div class="grill right"></div>
+        <h1>grooves & grams</h1>
         <div id="youtube"></div>
         <progress id="seeker" min="0" max="100" value="80"></progress>
         <div id="credits">
-          <span>With</span>
-          <i class="icon">favorite</i>
           <span>by</span>
           <a href="https://nishan.rayamajhee.com">nishan</a>
         </div>
       </div>
       <div class="flex" id="keys">
         <div class="flex">
-          <button class="key" id="play"><i class="icon">play_arrow</i></button>
+          <button class="key" id="play">
+            <i class="icon">play_arrow</i>
+          </button>
         </div>
         <div class="flex">
-          <button class="key"><i class="icon">skip_previous</i></button>
-          <button class="key">
+          <button id="prev" class="key">
+            <i class="icon">skip_previous</i>
+          </button>
+          <button id="next" class="key">
             <i class="icon">skip_next</i>
           </button>
         </div>
         <div class="flex">
-          <button class="key">
+          <button id="shuffle" class="key">
             <i class="icon">shuffle</i>
           </button>
           <button class="key track">♣</button>
@@ -51,10 +56,10 @@
         <div class="flex">
           <div id="wheel">
             <button id="vol-up">
-              <i class="icon">add</i>
+              <i>add</i>
             </button>
             <button id="vol-down">
-              <i class="icon">remove</i>
+              <i>remove</i>
             </button>
           </div>
         </div>
@@ -64,10 +69,12 @@
     <script src="./main.js"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-25T0QL09HT');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-25T0QL09HT");
     </script>
   </body>
 </html>
