--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>grooves and grams</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <title>grooves and grams</title><script async src="https://www.googletagmanager.com/gtag/js?id=G-25T0QL09HT"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap"
@@ -15,6 +14,14 @@
       rel="stylesheet"
     />
     <link href="./main.css" rel="stylesheet" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25T0QL09HT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-25T0QL09HT');
+    </script>
   </head>
   <body>
     <!-- <div id="ocean"></div> -->
@@ -67,14 +74,5 @@
     </div>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="./main.js"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-25T0QL09HT");
-    </script>
   </body>
 </html>
