Update google tag manager script (#1)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link href="./main.css" rel="stylesheet" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25T0QL09HT"></script>
   </head>
   <body>
     <!-- <div id="ocean"></div> -->
@@ -69,12 +70,10 @@
     <script src="./main.js"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      gtag("config", "G-25T0QL09HT");
+      gtag('config', 'G-25T0QL09HT');
     </script>
   </body>
 </html>
